Fixed footer centring on firefox

--- a/StarmixInfo/wwwroot/css/site.css
+++ b/StarmixInfo/wwwroot/css/site.css
@@ -148,6 +148,7 @@ hr {
 }
 
 .footer {
+    width: -moz-fit-content;
     width: fit-content;
     margin: 0 auto;
 }
